--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "comgeo"
-version = "0.0.7"
+version = "0.0.8"
 authors = [
   { name="KhoiDOO", email="khoido8899@gmail.com" }, # Replace with your actual name and email
 ]
@@ -17,7 +17,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy"
+    "numpy",
+    "matplotlib",
+    
 ]
 
 [project.urls]
